--- a/Additional tasks/Glass_and_on_top.ipynb
+++ b/Additional tasks/Glass_and_on_top.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 100 floors and 2 dlasses"
+    "### 100 floors and 2 glasses"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1000 floors and 2 dlasses"
+    "### 1000 floors and 2 glasses"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1000 floors and 3 dlasses"
+    "### 1000 floors and 3 glasses"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1000 floors and 5 dlasses"
+    "### 1000 floors and 5 glasses"
    ]
   },
   {
